--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</section>
 		<section id='congratulation-message'>
 			<div class='section-inner'>
-				<p class='p1'>Happy one year workaversery Aidan!! Your career accomplishments are absolutely incredible. I’ll never get tired of hearing people say “a software engineer at Amazon at 20?!“ But more than I admire your work accomplishments, I admire the drive and passion you have for programming. Hearing you get excited about a project or a work problem that needs solving brings me so much joy :) Thank you for your willingness to share bits of your knowledge with me!</p>
+				<p class='p1'>Happy one year workaversery Aidan!! Your career accomplishments are absolutely incredible. I’ll never get tired of hearing people say “a software engineer at Amazon at 20?!“ But more than I admire your work accomplishments, I admire the drive and passion you have for programming. Hearing you get excited about a project or a work problem that needs solving brings me so much joy :) Thank you for your willingness to share bits of your knowledge with me! It's a real gift to get to learn about neat programming things from someone as knowledgable as yourself.</p>
 			</div>
 		</section>
 		<section class="work-party-images">
@@ -44,6 +44,7 @@
           				} 
       				});
    			</script>
+			<p>PS: I lik u a lot <3</p>
 		</section>
 	</main>
 
